Fix spacing of floated rotated images on the editor

--- a/scss/ckeditor-styles.scss
+++ b/scss/ckeditor-styles.scss
@@ -409,3 +409,12 @@ drupal-entity[data-align=center] {
   clear: both;
   text-align: center;
 }
+
+figure.align-left {
+  float: left;
+  margin-right: 7%;
+}
+figure.align-right {
+  float: right;
+  margin-left: 7%;
+}
